fixed text-align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,5 +15,5 @@ header{
 header h1{
     /*width: 100%;
     width: 5vw; //to do: fix size of container"*/
-    text-allign: center;
+    text-align: center;
 }
